# Code_TIL

./: .gitignore  README.md
Algorithm/Graph/: dijkstar.py  heap.py
Algorithm/Sorting/: bubble_sort.py  bubble_sorting.py  insertion_sort.py  selection_sort.py
FastAPI/FastAPI Tutorial/: main.py  requirements.txt
Golang/: channel.go  control_flow.go  functions.go  goroutine.go  goroutineWaitGroup.go  tutorialNewMake.go
Golang/excel/: .gitignore  go.mod  go.sum
HTML-CSS/grid/: grid.css  grid.html
Lectures/udemy - Complete Java for Automation/: README.md
Lectures/udemy - go web development/: README.md
Python/: json_example.py  property.py
Python/Django/django-basics/: .gitignore  pyproject.toml
Python/Django/django-basics/accounts/: models.py
Python/Django/django-basics/accounts/migrations/: 0001_initial.py  0002_likedcomment_likedpost.py
Python/Django/django-basics/communities/: admin.py  models.py  serializesrs.py  urls.py  views.py
Python/Django/django-basics/communities/migrations/: 0001_initial.py  0002_adminpost.py  0003_popularpost_post_likes.py  0004_alter_popularpost_options.py  0005_alter_post_options.py  0006_reply.py  0007_post_post_no_post_unique_community_post_no.py
Python/Django/django-basics/config/: settings.py  urls.py
Python/Django/django-basics/todos/: models.py  urls.py  views.py
Python/Django/django-basics/todos/migrations/: 0001_initial.py  0002_todo_description_todo_title.py
TypeScript/: interface.ts
react-example/: package-lock.json
simplediary/: package-lock.json
udemy - web developer bootcamp 2023/: README.md
(+159 files in other folders)
